Fixed spacing on graphic page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -689,6 +689,11 @@ $h3FontFamily:	'Quicksand', sans-serif;
 		margin-top: 0;
 	}
 
+// MY STORY
+	.myStoryBtn {
+	    width: 14vw;
+	}
+
 
 // WEB & UX
 	.project1, .project2, .project3 {
@@ -710,15 +715,15 @@ $h3FontFamily:	'Quicksand', sans-serif;
 		margin-top: 4em;
 	}
 
-	.project1 {
+	.wbsProj {
 		height: 349px;
 	}
 
-	.project2 {
+	.tcProj {
 		height: 367px;
 	}
 
-	.project3 {
+	.ocularProj {
 		height: 405px;
 	}
 
@@ -742,5 +747,18 @@ $h3FontFamily:	'Quicksand', sans-serif;
 	.footer {
 		margin-bottom: 3em;
 		margin-top: 4.3em;
+	}
+
+// GRAHPIC
+	.smsProj {
+		height: auto
+	}
+
+	.graphBtnContainer {
+		margin-top: 3em;
+	}
+
+	#graphProjDesc {
+		margin: 5em 0;
 	}
 }
